# srte

./: .clang-format  .gitignore  Makefile  README.md  meson.build  test1.srte
assembler/: ast.cpp  ast.hpp  astprint.cpp  main.cpp  meson.build  numparse.cpp  numparse.hpp  opcode.cpp  opcode.hpp  type.cpp  type.hpp
assembler/codegen/: codegen.cpp  codegen.hpp  codegencontext.cpp  codegencontext.hpp  llvmtype.cpp  llvmtype.hpp  mangle.cpp  mangle.hpp
assembler/codegen/toolkit/: README.md  unit.cpp  unit.hpp
assembler/parser/: location.hh  parser-support.hpp  srte-asm-parser.cpp  srte-asm-parser.hpp  srte-asm.y
assembler/parser/drv/: drv.cpp  drv.hpp  parser-private.hpp
assembler/readir/: readir.cpp  readir.hpp
assembler/resources/: ir-resources.json
assembler/runtime-support/: corelib.cpp  corelib.hpp
assembler/scanner/: fastscanner.cpp  fastscanner.hpp
build-aux/: bison.py  rc-comp.py
runtime/assembler-support/: strdefs.ll
runtime/core/: meson.build  own.c  own.h  rtalias.h  srte_string.c  srte_string.h
test/: testrunner.py
test/parser/globals/: globals_array_length_too_large.srte  globals_ok.srte
test/parser/version/: version_byte_too_large.srte  version_incorrect_literal.srte  version_missing_info.srte  version_ok.srte
